--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "build:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
     "build": "npm-run-all --serial build:*",
-    "composer:pl": "cd apps/pattern-lab && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:core-php": "cd packages/core-php && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:bolt-site": "cd apps/bolt-site && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:pw-site": "cd apps/pw-site && rm -rf vendor composer.lock && composer install --no-interaction",
-    "composer:drupal-lab": "cd apps/drupal-lab && rm -rf vendor web/modules/contrib composer.lock && composer install --no-interaction",
+    "composer:pl": "cd apps/pattern-lab && composer install --no-interaction",
+    "composer:core-php": "cd packages/core-php && composer install --no-interaction",
+    "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
+    "composer:pw-site": "cd apps/pw-site && composer install --no-interaction",
+    "composer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction",
     "composer": "npm-run-all --serial composer:*",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
