--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ script:
 - travis_wait npm run build && ./scripts/deploy.sh && node ./scripts/netlify-notifier.js && ./scripts/update-read-only-git-repos.sh
 #- travis_wait npm run build && npm run deploy # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
+after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build. 
+  - git status # Just want to check
+
 cache:
   apt: true
   yarn: true
