--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "build:bolt-site": "cd apps/bolt-site && npm run build:prod",
     "build:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
-    "build": "npm-run-all --serial build:*",
+    "build": "npm-run-all --parallel build:* --aggregate-output --print-label --print-name",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction",
     "composer:core-php": "cd packages/core-php && composer install --no-interaction",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction",
     "composer:pw-site": "cd apps/pw-site && composer install --no-interaction",
     "composer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction",
-    "composer": "npm-run-all --serial composer:*",
+    "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
     "predeploy": "npm run build",
