--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,10 @@ before_script:
 
 # Can't do deploy on `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 script:
-- bash ./travis.sh
+#- bash ./travis.sh
+- npm run build:bolt-site
+- npm run build:pl
+- npm run deploy
 
 after_success: # Warning: this fires after a build is already marked as successful so failing this will not fail the build.
   - git status # Just want to check
